--- a/source/Reqnroll.Retry.TUnit.Tests/Reqnroll.Retry.TUnit.Tests.csproj
+++ b/source/Reqnroll.Retry.TUnit.Tests/Reqnroll.Retry.TUnit.Tests.csproj
@@ -1,9 +1,54 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>exe</OutputType>
+        <TargetFramework>net10.0</TargetFramework>
+        <LangVersion>latest</LangVersion>
+        <RollForward>major</RollForward>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <WarningsAsErrors>nullable</WarningsAsErrors>
+        <IsPackable>false</IsPackable>
+        <!-- Enable New Dotnet Test Experience For .NET 10 -->
+        <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+        <!-- Use A Root Namespace Without TUnit As A Standalone Segment To Avoid TUnit.Core Resolution Conflict -->
+        <!-- The Reqnroll.TUnit Generator Doesn't Use global:: Prefix For TUnit.Core References -->
+        <RootNamespace>ReqnrollRetry.TUnitTests</RootNamespace>
+        <AssemblyName>ReqnrollRetry.TUnitTests</AssemblyName>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <!-- Retry Count For BDD Tests (Used By The Code-Generated Retry Mechanism) -->
+        <ReqnrollRetryCount>2</ReqnrollRetryCount>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="../Reqnroll.Retry.TUnit/Reqnroll.Retry.TUnit.csproj">
+            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+            <PrivateAssets>all</PrivateAssets>
+        </ProjectReference>
+    </ItemGroup>
+
+    <!-- Import The Retry Targets File (Simulates What Happens When Consuming The NuGet Package) -->
+    <Import Project="../Reqnroll.Retry.TUnit/NuGet/build/Reqnroll.Retry.TUnit.targets" />
+
+    <ItemGroup>
+        <Content Include="reqnroll.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="TUnit" Version="1.12.80" />
+        <PackageReference Include="Reqnroll.TUnit" Version="3.3.3" />
+    </ItemGroup>
+
+    <Target Name="DeleteBDDCodeBehindFiles" AfterTargets="AfterClean">
+        <ItemGroup>
+            <BDDCodeBehindFiles Include="**/*.feature.cs" />
+        </ItemGroup>
+
+        <Delete Files="@(BDDCodeBehindFiles)" />
+    </Target>
 
 </Project>
