--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Visual Studio Cache
-.vs
-
 # Build Artefact Directories
 source/*/bin
 source/*/obj
@@ -10,3 +7,9 @@ source/*/Features/*.feature.cs
 
 # Reqnroll Generator Plugin DLLs
 source/*/NuGet/build/netstandard2.0/*.dll
+
+# NuGet Package Output Directory
+nupkgs
+
+# Visual Studio Cache
+.vs
