--- a/source/Reqnroll.Retry.TUnit/Reqnroll.Retry.TUnit.csproj
+++ b/source/Reqnroll.Retry.TUnit/Reqnroll.Retry.TUnit.csproj
@@ -17,8 +17,8 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Title>Reqnroll.Retry.TUnit</Title>
-        <PackageId>Reqnroll.Retry.TUnit</PackageId>
+        <Title>Retry.Reqnroll.TUnit</Title>
+        <PackageId>Retry.Reqnroll.TUnit</PackageId>
         <Version>1.0.0</Version>
         <Authors>Aleksander Reinhardt</Authors>
         <Summary>Adds automatic retry functionality to Reqnroll tests using TUnit.</Summary>
