--- a/source/Reqnroll.Retry.xUnit/Reqnroll.Retry.xUnit.csproj
+++ b/source/Reqnroll.Retry.xUnit/Reqnroll.Retry.xUnit.csproj
@@ -17,8 +17,8 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Title>Reqnroll.Retry.xUnit</Title>
-        <PackageId>Reqnroll.Retry.xUnit</PackageId>
+        <Title>Retry.Reqnroll.xUnit</Title>
+        <PackageId>Retry.Reqnroll.xUnit</PackageId>
         <Version>1.0.0</Version>
         <Authors>Aleksander Reinhardt</Authors>
         <Summary>Adds automatic retry functionality to Reqnroll tests using xUnit via the xRetry library.</Summary>
