--- a/source/Reqnroll.Retry.TUnit/Reqnroll.Retry.TUnit.csproj
+++ b/source/Reqnroll.Retry.TUnit/Reqnroll.Retry.TUnit.csproj
@@ -22,9 +22,11 @@
         <Version>1.0.0</Version>
         <Authors>Aleksander Reinhardt</Authors>
         <Summary>Adds automatic retry functionality to Reqnroll tests using TUnit.</Summary>
-        <Description>A Reqnroll generator plugin that automatically adds the TUnit [Retry] attribute to all generated BDD test methods. Supports configurable retry count via the ReqnrollRetryCount MSBuild property.</Description>
+        <Description>A Reqnroll generator plugin that automatically adds the TUnit retry attribute to all generated BDD test methods. Supports configurable retry count via the ReqnrollRetryCount MSBuild property.</Description>
         <PackageTags>reqnroll;bdd;tunit;retry;testing;specflow</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/Xen0byte/Reqnroll.Retry</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/Xen0byte/Reqnroll.Retry</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
