--- a/source/Reqnroll.Retry.xUnit/Reqnroll.Retry.xUnit.csproj
+++ b/source/Reqnroll.Retry.xUnit/Reqnroll.Retry.xUnit.csproj
@@ -21,10 +21,12 @@
         <PackageId>Retry.Reqnroll.xUnit</PackageId>
         <Version>1.0.0</Version>
         <Authors>Aleksander Reinhardt</Authors>
-        <Summary>Adds automatic retry functionality to Reqnroll tests using xUnit via the xRetry library.</Summary>
-        <Description>A Reqnroll generator plugin that automatically adds xRetry retry attributes to all generated BDD test methods. Replaces SkippableTheory/SkippableFact with RetryTheory/RetryFact. Supports configurable retry count via the ReqnrollRetryCount MSBuild property. Requires the xRetry NuGet package.</Description>
-        <PackageTags>reqnroll;bdd;xunit;xretry;retry;testing;specflow</PackageTags>
+        <Summary>Adds automatic retry functionality to Reqnroll tests using xUnit.</Summary>
+        <Description>A Reqnroll generator plugin that automatically adds the xUnit retry attribute to all generated BDD test methods. Supports configurable retry count via the ReqnrollRetryCount MSBuild property.</Description>
+        <PackageTags>reqnroll;bdd;xunit;retry;testing;specflow</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/Xen0byte/Reqnroll.Retry</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/Xen0byte/Reqnroll.Retry</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
