--- a/source/Reqnroll.Retry.xUnit/Reqnroll.Retry.xUnit.csproj
+++ b/source/Reqnroll.Retry.xUnit/Reqnroll.Retry.xUnit.csproj
@@ -17,21 +17,29 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Title>Retry.Reqnroll.xUnit</Title>
+        <Title>Reqnroll.Retry.xUnit</Title>
         <PackageId>Retry.Reqnroll.xUnit</PackageId>
         <Version>1.0.0</Version>
         <Authors>Aleksander Reinhardt</Authors>
+        <Copyright>Copyright (c) 2026 Aleksander Reinhardt</Copyright>
         <Summary>Adds automatic retry functionality to Reqnroll tests using xUnit.</Summary>
         <Description>A Reqnroll generator plugin that automatically adds the xUnit retry attribute to all generated BDD test methods. Supports configurable retry count via the ReqnrollRetryCount MSBuild property.</Description>
         <PackageTags>reqnroll;bdd;xunit;retry;testing;specflow</PackageTags>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>readme.md</PackageReadmeFile>
+        <PackageLicenseFile>license</PackageLicenseFile>
+        <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/Xen0byte/Reqnroll.Retry</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
         <PackageProjectUrl>https://github.com/Xen0byte/Reqnroll.Retry</PackageProjectUrl>
+        <NeutralLanguage>en-GB</NeutralLanguage>
     </PropertyGroup>
 
     <ItemGroup>
         <!-- Include Build Targets For Reqnroll Generator Plugin -->
         <None Include="NuGet/build/**/*" Pack="true" PackagePath="build" />
+        <None Include="../../readme.md" Pack="true" PackagePath="" />
+        <None Include="../../license" Pack="true" PackagePath="" />
+        <None Include="NuGet/icon.png" Pack="true" PackagePath="" />
     </ItemGroup>
 
     <Target Name="CopyGeneratorPluginToNuGetFolder" AfterTargets="Build">
